群聊、血糖血压

--- a/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/bloodPressureRecord.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/bloodPressureRecord.html
@@ -1,54 +1,96 @@
-<ion-view style="background:white">
-    <div page-loading></div>
-    <form name="bloodSugarRecordForm" ng-submit="submitForm()" novalidate>
-        <!--headerTitle start-->
-        <header>
-            <div ng-if="h5Page" style="float:left;margin-top:4%;margin-left:2%;font-size:0.34rem;"
-                 ng-click="returnRootNative()">&lt;返回
-            </div>
-            <h1>血压测量记录</h1>
-            <button ng-if="h5Page" ng-hide="bloodPressure.readOnly">保存</button>
-            <em ng-show="bloodPressure.readOnly"></em>
-        </header>
-        <div class="empty10"></div>
-        <!--headerTitle end-->
-        <!--content start-->
-        <section class="monitorContainer">
-            <div id="measureCont" ng-click="bloodPressure.emptyCont=true" ng-hide="bloodPressure.readOnly">
-                <div ng-if="!bloodPressure.emptyCont" class="monitorDataCont bloodPressureCont">添加测量值</div>
-                <div ng-if="bloodPressure.emptyCont" class="pressureItem clearfix">
-                    <p id="diastolic">{{bloodPressure.diastolic || '--'}}</p>
-                    <p id="systolic">{{bloodPressure.systolic || '--'}}</p>
-                    <p id="heartRate">{{bloodPressure.heartRate || '--'}}</p>
-                </div>
-            </div>
-            <div ng-show="bloodPressure.readOnly">
-                <div class="pressureItem">
+<meta name="format-detection" content="telephone=no">
+<ion-view style="background:#f8f8f8;">
+    <!--content start-->
+    <style>
+        .list>div{position:absolute;width:30%;top:35px;}
+        .list>div>img{width:100%;position:absolute;}
+        .list .text{width:100%;position:absolute;left:0px;top:21px;font-size:30px;color:#fff;text-align:center;line-height:30px;}
+    </style>
+    <div class="subscribeForm" style="padding-top:0px;">
+        <h2 style="line-height:40px;">{{bloodPressure.measureDate || bloodPressure.nowDate}}</h2>
+        <div class="list" style="background:#fff;height:190px;">
+            <div style="left:3%;">
+                <img ng-if="bloodPressure.diastolic > 220" src="images/bloodSugar_bj1.png" alt="">
+                <img ng-if="bloodPressure.diastolic < 220" src="images/bloodSugar_bj.png" alt="">
+                <div class="text" style="">
                     <p>{{bloodPressure.diastolic}}</p>
-                    <p>{{bloodPressure.systolic}}</p>
-                    <p>{{bloodPressure.heartRate}}</p>
+                    <p style="font-size:18px;">高压</p>
                 </div>
             </div>
-            <ul class="bloodPressureUnit clearfix"><li>高压</li><li>低压</li><li>心率</li></ul>
-            <div class="monitorDataInf">
-                <p>
-                    <em>测量时间：</em>
-                    <span id="measureTime">{{bloodPressure.measureTime || bloodPressure.nowTime}}</span>
-                    <span id="measureDate">{{bloodPressure.measureDate || bloodPressure.nowDate}}</span>
-                    <input ng-hide="bloodPressure.readOnly" type="text" value="" id="measureTimeInp" readonly/>
-                </p>
-                <p>
-                    <em>控制目标：</em>
-                    <span ng-hide="bloodPressure.readOnly"><a ui-sref="controlObjective({objectiveType:'bloodPressure'})">{{bloodPressure.objective || "请填写"}}mmol/L</a></span>
-                    <span ng-show="bloodPressure.readOnly">{{bloodPressure.objective}}mmol/L</span>
-                </p>
+            <div style="left:34%;">
+                <img ng-if="bloodPressure.systolic > 150" src="images/bloodSugar_bj1.png" alt="">
+                <img ng-if="bloodPressure.systolic < 150" src="images/bloodSugar_bj.png" alt="">
+                <div class="text">
+                    <p>{{bloodPressure.systolic}}</p>
+                    <p style="font-size:18px;">低压</p>
+                </div>
             </div>
-            <div ng-if="bloodPressure.remark">
-                <p class="monitorTxt">文字备注</p>
-                <textarea ng-hide="bloodPressure.readOnly" name="remark" placeholder="请在这里输入..."  class="remarkcCont" ng-model="bloodPressure.remark"></textarea>
-                <p ng-show="bloodPressure.readOnly" class="remarkcCont">{{bloodPressure.remark || '无'}}</p>
+            <div style="left:66%;">
+                <img ng-if="bloodPressure.heartRate > 70" src="images/bloodSugar_bj1.png" alt="">
+                <img ng-if="bloodPressure.heartRate < 70" src="images/bloodSugar_bj.png" alt="">
+                <div class="text">
+                    <p>{{bloodPressure.heartRate}}</p>
+                    <p style="font-size:18px;">心率</p>
+                </div>
             </div>
-        </section>
-        <!--content end-->
-    </form>
+        </div>
+        <div>
+            <h2 style="padding-top:20px;">测量时间</h2>
+            <p style="margin-left:15px;">
+                {{bloodPressure.measureTime || bloodPressure.nowTime}}
+            </p>
+            <h2 style="padding-top:20px;">文字备注</h2>
+            <p style="margin-left:15px;">
+                {{bloodPressure.remark || '无'}}
+            </p>
+        </div>
+    </div>
 </ion-view>
+
+
+
+
+<!--<ion-view style="background:white">-->
+    <!--<div page-loading></div>-->
+    <!--<form name="bloodSugarRecordForm" ng-submit="submitForm()" novalidate>-->
+     <!---->
+        <!--&lt;!&ndash;content start&ndash;&gt;-->
+        <!--<section class="monitorContainer">-->
+            <!--<div id="measureCont" ng-click="bloodPressure.emptyCont=true" ng-hide="bloodPressure.readOnly">-->
+                <!--<div ng-if="!bloodPressure.emptyCont" class="monitorDataCont bloodPressureCont">添加测量值</div>-->
+                <!--<div ng-if="bloodPressure.emptyCont" class="pressureItem clearfix">-->
+                    <!--<p id="diastolic">{{bloodPressure.diastolic || '&#45;&#45;'}}</p>-->
+                    <!--<p id="systolic">{{bloodPressure.systolic || '&#45;&#45;'}}</p>-->
+                    <!--<p id="heartRate">{{bloodPressure.heartRate || '&#45;&#45;'}}</p>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div ng-show="bloodPressure.readOnly">-->
+                <!--<div class="pressureItem">-->
+                    <!--<p>{{bloodPressure.diastolic}}</p>-->
+                    <!--<p>{{bloodPressure.systolic}}</p>-->
+                    <!--<p>{{bloodPressure.heartRate}}</p>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<ul class="bloodPressureUnit clearfix"><li>高压</li><li>低压</li><li>心率</li></ul>-->
+            <!--<div class="monitorDataInf">-->
+                <!--<p>-->
+                    <!--<em>测量时间：</em>-->
+                    <!--<span id="measureTime">{{bloodPressure.measureTime || bloodPressure.nowTime}}</span>-->
+                    <!--<span id="measureDate">{{bloodPressure.measureDate || bloodPressure.nowDate}}</span>-->
+                    <!--<input ng-hide="bloodPressure.readOnly" type="text" value="" id="measureTimeInp" readonly/>-->
+                <!--</p>-->
+                <!--<p>-->
+                    <!--<em>控制目标：</em>-->
+                    <!--<span ng-hide="bloodPressure.readOnly"><a ui-sref="controlObjective({objectiveType:'bloodPressure'})">{{bloodPressure.objective || "请填写"}}mmol/L</a></span>-->
+                    <!--<span ng-show="bloodPressure.readOnly">{{bloodPressure.objective}}mmol/L</span>-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div ng-if="bloodPressure.remark">-->
+                <!--<p class="monitorTxt">文字备注</p>-->
+                <!--<textarea ng-hide="bloodPressure.readOnly" name="remark" placeholder="请在这里输入..."  class="remarkcCont" ng-model="bloodPressure.remark"></textarea>-->
+                <!--<p ng-show="bloodPressure.readOnly" class="remarkcCont">{{bloodPressure.remark || '无'}}</p>-->
+            <!--</div>-->
+        <!--</section>-->
+        <!--&lt;!&ndash;content end&ndash;&gt;-->
+    <!--</form>-->
+<!--</ion-view>-->
