--- a/project/elder-project/src/main/resources/static/js/views/my/myActivity.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myActivity.html
@@ -3,7 +3,8 @@
     <ion-content>
         <div class="list">
             <a class="item"
-               ng-repeat="item in param.recentPublishActive">
+               ng-repeat="item in param.recentPublishActive"
+               ui-sref="activityDetail({activityId:item.activityId})">
                 <h2 style="margin-bottom:8px;">{{item.activityName}}</h2>
                 <p><i class="icon ion-location" style="margin-left:2px;"></i>&nbsp;{{item.activityAddress}}</p>
                 <p><i class="icon ion-person"></i>&nbsp;{{item.activityAttendedNum}}人已报名</p>
