--- a/project/elder-project/src/main/resources/static/js/views/message/extendMessage.html
+++ b/project/elder-project/src/main/resources/static/js/views/message/extendMessage.html
@@ -5,7 +5,7 @@
         <div class="list">
             <a class="item item-text-wrap item-icon-left"
                ng-repeat="item in extendMessageList" ng-click="goDetail(item)">
-                <i class="icon ion-ios-email-outline" style="color:#ff8e01"></i>
+                <i ng-if="item.extendMessageStatus != '1'" class="icon ion-ios-email-outline" style="color:#ff8e01"></i>
                 <h2 style="margin-bottom:8px;">{{item.extendMessageName}}</h2>
                 <p>{{item.extendMessageDate|date:'yyyy/MM/dd HH:mm:ss'}}</p>
             </a>
