--- a/project/elder-project/src/main/resources/static/js/views/living/subscribeService.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/subscribeService.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <button class="button button-full button-energized subscribe-btn"
-                    ng-click="subscribeConfirm()" style="margin-top:30px;" ng-disabled="subscribeForm.$invalid">确认预约</button>
+                    ng-click="subscribeConfirm()" style="margin-top:30px;" ng-disabled="canClick">确认预约</button>
         </form>
     </ion-content>
 </ion-view>
