--- a/project/elder-project/src/main/resources/static/js/views/community/activity/attendActivity.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/activity/attendActivity.html
@@ -5,15 +5,16 @@
 			<div class="bar bar-header" style="height:60px;border-bottom:1px solid #ddd;">
 				<div class="title" style="line-height:60px;">{{detailActivityInfo.activityName}}</div>
 			</div>
-            <div class="subscribeForm">
+            <form name="activityForm" class="subscribeForm">
                 <h2>请输入活动参与者信息</h2>
                 <div class="list">
                     <label class="item item-input">
                         <input type="text" placeholder="输入姓名" ng-model="activity.name">
                     </label>
                     <label class="item item-input">
-                        <input type="text" placeholder="输入电话" ng-model="activity.phone">
+                        <input type="text" name="phoneNum" placeholder="输入电话" ng-model="activity.phone" ng-pattern="/^1[3|4|5|7|8]\d{9}$/">
                     </label>
+                    <span ng-show="activityForm.phoneNum.$dirty && activityForm.phoneNum.$invalid" style="margin-left:15px;line-height:40px;color:#f00;">手机号输入有误，请重新输入</span>
                 </div>
                 <div style="background:#f8f8f8;padding-top:15px;">
                     <h2>活动信息</h2>
@@ -27,7 +28,7 @@
                         至&nbsp;{{detailActivityInfo.activityEndDate|date:'yyyy/MM/dd: HH:mm'}}
                     </p>
                 </div>
-            </div>
+            </form>
 		</div>
 		<div ng-if="param.attended">
             <img src="images/success.png" alt="" style="width:140px;margin-left:31%;margin-top:56px;">
@@ -36,7 +37,7 @@
 		</div>
         <div ng-if="!param.attended">
             <button class="button button-full button-energized subscribe-btn"
-                    ng-click="confirmAttend()" style="margin-top:40px;">立即报名</button>
+                    ng-click="confirmAttend()" style="margin-top:40px;" ng-disabled="canClick">立即报名</button>
         </div>
 	</ion-content>
 </ion-view>
