--- a/project/elder-project/src/main/resources/static/js/views/phone/bindPhone.html
+++ b/project/elder-project/src/main/resources/static/js/views/phone/bindPhone.html
@@ -19,12 +19,12 @@
             <div ng-if="state != 'yetBind'">
                 <div>
                     <label class="item item-input">
-                        <input type="text" name="phoneNum" placeholder="请输入手机号" class="ng-pristine ng-untouched ng-valid ng-empty" ng-pattern="/^1[3|4|5|7|8]\d{9}$/" ng-model="phone.number">
+                        <input type="text" name="phoneNum" placeholder="请输入手机号" class="ng-pristine ng-untouched ng-valid ng-empty" ng-pattern="/^1[3|4|5|7|8]\d{9}$/" ng-model="phone.number" ng-change="inputChange()">
                     </label>
                 </div>
                 <div style="position:relative;">
                     <label class="item item-input">
-                        <input type="text" name="phoneCode" placeholder="请输入验证码" class="ng-pristine ng-untouched ng-valid ng-empty" ng-model="phone.code">
+                        <input type="text" name="phoneCode" placeholder="请输入验证码" class="ng-pristine ng-untouched ng-valid ng-empty" ng-model="phone.code" ng-change="inputChange()">
                     </label>
                     <button class="button button-full button-energized subscribe-btn bindPhoneCode" ng-click="phone.getCode()" ng-disabled="phone.canClick || bindForm.phoneNum.$invalid">{{phone.codeText}}</button>
                 </div>
