--- a/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/detectionDiagnose.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/detectionDiagnose.html
@@ -213,7 +213,7 @@
         <div class="item" style="overflow:inherit;white-space:inherit;line-height:28px;width:80%;margin:0 auto;">您目前还没有测量数据。健康监测属于养老机构提供的有偿服务，您暂时无法查看相关健康数据。</div>
     </div>
     </ion-content>
-    <div ng-if="hasData" class="bar bar-footer">
+    <div ng-if="hasData" class="bar bar-footer" style="height:48px;background:#fff;border-top:1px solid #ccc;padding-top:0px;">
         <div ng-if="secondMenu == 'bloodSugarCurve'">
             <div class="healthFooter">
                 <a ng-click="goMenu('detection','bloodSugarTable')"><img src="images/slice_1.png"/></a>
