--- a/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
@@ -17,7 +17,7 @@
             </a>
         </div>
     <ion-content style="top:209px;">
-		<div ng-if="param.operation == 'introduce'" class="list" style="margin:52px 0px 40px;">
+		<div ng-if="param.operation == 'introduce'" class="list" style="margin-top:52px;padding-bottom:60px;">
 			<a class="item item-avatar item-text-wrap serviceDetail_cont" style="border:none;background:#f8f8f8;padding-left:20px;">
 				<h2>{{param.onlineCourseDetail.onlineCourseName}}</h2>
                 <p>主题：{{param.onlineCourseDetail.onlineCourseLabel}}</p>
