--- a/project/elder-project/src/main/resources/static/js/views/community/activity/activityDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/activity/activityDetail.html
@@ -25,7 +25,7 @@
             </a>
         </div>
     <ion-content style="top:242px;">
-        <div ng-if="param.operation == 'introduce'" class="list" style="margin-bottom:50px;">
+        <div ng-if="param.operation == 'introduce'" class="list" style="padding-bottom:50px;">
             <a class="item item-avatar item-text-wrap serviceDetail_cont" style="border:none;background:#f8f8f8;padding-left:20px;">
                 <h2><span>活动信息</span></h2>
                 <p><i class="icon ion-location" style="margin:0 9px 0 3px;"></i>{{detailActivityInfo.activityAddress}}</p>
