--- a/project/elder-project/src/main/resources/static/js/views/my/myChat.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myChat.html
@@ -11,8 +11,8 @@
 					{{item.ext.user_nice_name}}
 				</h2>
 				<br>
-				<ul></ul>
-				<span>{{item.data}}</span>
+				<ul style="left:76px;border-color:transparent #ffb900 transparent transparent;"></ul>
+				<span style="margin-top:-14px;">{{item.data}}</span>
 			</div>
 			<div ng-if="item.from=='elder'" style="margin-top:10px">
 				<img style="margin-right:15px;width:60px;height:60px;float:right;z-index:2"
@@ -45,11 +45,7 @@
 		<div class="col" style="background:#ddd;max-width:60px;margin-left:5%;border-radius:10px 10px;position:relative;height:83px;">
 			<i class="icon ion-image" style="font-size:35px;margin-left:10px"></i>
 			<span style="margin-left:-32px;top:32px;position:relative;color:black">图片</span>
-            <input id="image" type="file" accept="image/*" capture="camera" onchange="angular.element(this).scope().sendPrivateImg()" ng-model="image" style="width:100%;height:100%;position:absolute;left:0px;top:0px;opacity:0;"/>
+            <input id="image" type="file" accept="image/*" onchange="angular.element(this).scope().sendPrivateImg()" ng-model="image" style="width:100%;height:100%;position:absolute;left:0px;top:0px;opacity:0;"/>
 		</div>
-		<!--<div class="col" style="background:#ddd;max-width:60px;margin-left:5%;border-radius:10px 10px">-->
-			<!--<i class="icon ion-camera" style="font-size:35px;margin-left:10px"></i>-->
-			<!--<span style="margin-left:-32px;top:24px;position:relative;color:black">拍摄</span>-->
-		<!--</div>-->
 	</div>
 </ion-view>
