--- a/project/elder-project/src/main/resources/static/js/views/my/myChat.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myChat.html
@@ -13,7 +13,7 @@
 				<b ng-if="item.data.url" style="float:left;margin-left:90px;margin-top:-16px;"><img src="{{item.data.url}}" alt="" style="max-width:150px;min-width:100px;"></b>
 			</div>
 			<div class="chatContent" ng-if="item.from=='elder'">
-				<img style="float:right;z-index:2"
+				<img style="float:right;z-index:2;margin-right:15px;"
 					 ng-src="{{item.ext.user_img}}?x-oss-process=image/resize,m_fill,h_50,w_50">
 				<h2 style="margin-top:-1px;float:right;">
 					{{item.ext.user_nice_name}}
