--- a/project/elder-project/src/main/resources/static/js/views/my/myChat.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myChat.html
@@ -8,8 +8,8 @@
 					{{item.ext.user_nice_name}}
 				</h2>
 				<br>
-				<ul ng-if="!item.data.url" style="left:77px;top:-50px;border-color:transparent #ffb900 transparent transparent;"></ul>
-				<span ng-if="!item.data.url" style="margin-top:-20px;">{{item.data}}</span>
+				<ul ng-if="!item.data.url" style="left:77px;top:-50px;border-color:transparent #fff transparent transparent;"></ul>
+				<span ng-if="!item.data.url" style="margin-top:-20px;background:#fff;">{{item.data}}</span>
 				<b ng-if="item.data.url" style="float:left;margin-left:90px;margin-top:-16px;"><img src="{{item.data.url}}" alt="" style="max-width:150px;min-width:100px;"></b>
 			</div>
 			<div class="chatContent" ng-if="item.from=='elder'">
