--- a/project/elder-project/src/main/resources/static/js/views/my/myChat.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myChat.html
@@ -2,7 +2,7 @@
 	<!--<ion-scroll delegate-handle="chat-content" ng-style="param.scrollStyle">-->
     <ion-scroll delegate-handle="chat-content" style="height:93%">
 		<div class="chat" ng-repeat="item in param.messageList">
-			<div class="chatContent" ng-if="item.from!='elder'">
+			<div class="chatContent" ng-if="item.from!=elderName">
 				<img ng-src="{{item.ext.user_img}}?x-oss-process=image/resize,m_fill,h_50,w_50">
 				<h2 style="margin-left:85px;margin-top:-60px;">
 					{{item.ext.user_nice_name}}
@@ -10,9 +10,9 @@
 				<br>
 				<ul ng-if="!item.data.url" style="left:77px;top:-50px;border-color:transparent #fff transparent transparent;"></ul>
 				<span ng-if="!item.data.url" style="margin-top:-20px;background:#fff;">{{item.data}}</span>
-				<b ng-if="item.data.url" style="float:left;margin-left:90px;margin-top:-16px;"><img src="{{item.data.url}}" alt="" style="max-width:150px;min-width:100px;"></b>
+				<b ng-if="item.data.url" style="float:left;margin-left:90px;margin-top:-16px;"><img src="{{item.data.url}}" alt="" style="max-width:150px;min-width:80px;"></b>
 			</div>
-			<div class="chatContent" ng-if="item.from=='elder'">
+			<div class="chatContent" ng-if="item.from==elderName">
 				<img style="float:right;z-index:2;margin-right:15px;"
 					 ng-src="{{item.ext.user_img}}?x-oss-process=image/resize,m_fill,h_50,w_50">
 				<h2 style="margin-top:-1px;float:right;">
@@ -21,7 +21,7 @@
 				<br><br>
 				<ul ng-if="!item.data.url"></ul>
 				<span ng-if="!item.data.url" style="float:right;margin-right:3px;margin-left:0px;">{{item.data}}</span>
-                <b ng-if="item.data.url" style="float:right;margin-right:4px;margin-top:-7px;"><img src="{{item.data.url}}" alt="" style="max-width:150px;min-width:100px;"></b>
+                <b ng-if="item.data.url" style="float:right;margin-right:4px;margin-top:-7px;"><img src="{{item.data.url}}" alt="" style="max-width:150px;min-width:80px;"></b>
 			</div>
 		</div>
 	</ion-scroll>
