--- a/project/elder-project/src/main/resources/static/js/views/community/activity/attendActivity.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/activity/attendActivity.html
@@ -12,9 +12,9 @@
                         <input type="text" placeholder="输入姓名" ng-model="activity.name">
                     </label>
                     <label class="item item-input">
-                        <input type="text" name="phoneNum" placeholder="输入电话" ng-model="activity.phone" ng-pattern="/^1[3|4|5|7|8]\d{9}$/">
+                        <input type="text" name="phoneNum" placeholder="输入电话" ng-model="activity.phone" ng-pattern="/^1[3|4|5|7|8]\d{9}$/"  ng-focus="inputFocus()" ng-blur="inputBlur()">
                     </label>
-                    <span ng-show="activityForm.phoneNum.$dirty && activityForm.phoneNum.$invalid" style="margin-left:15px;line-height:40px;color:#f00;">手机号输入有误，请重新输入</span>
+                    <span ng-show="activityForm.phoneNum.$dirty && activityForm.phoneNum.$invalid && blurInp" style="margin-left:15px;line-height:40px;color:#f00;">手机号输入有误，请重新输入</span>
                 </div>
                 <div style="background:#f8f8f8;padding-top:15px;">
                     <h2>活动信息</h2>
