--- a/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/detectionDiagnose.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/detectionDiagnose.html
@@ -7,7 +7,7 @@
                 <img src="images/user_photo.png" alt="">
                 <img src="images/user_photo.png" alt="">
                 <img src="images/user_photo.png" alt="">
-                <span>3</span>
+                <!--<span>3</span>-->
             </div>
             <div class="chatTitle">
                 <p style="color:#060d25;font-size:18px;margin-bottom:6px;">健康管理群</p>
